add_library(multithreading INTERFACE)
target_include_directories(multithreading INTERFACE ${${project_name}_SOURCE_DIR}\\src)
target_compile_features(multithreading INTERFACE cxx_std_17)
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    target_compile_options(multithreading INTERFACE /W1 /Zc:__cplusplus "$<$<CONFIG:RELEASE>:/O2>")
else()
    target_compile_options(multithreading INTERFACE -Werror "$<$<CONFIG:RELEASE>:-O3>")
endif()
